force-app/main/default/objects/JBCXM__ReportSection__c/JBCXM__ReportSection__c.object-meta.xml
<CustomObject>
    <label>ReportSection</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ReportSections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>