force-app/main/default/objects/JBCXM__ReportSection__c/fields/JBCXM__ParentSection__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__ParentSection__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ParentSection</label>
    <referenceTo>JBCXM__ReportSection__c</referenceTo>
    <relationshipLabel>ParentSection</relationshipLabel>
    <relationshipName>ParentSection</relationshipName>
    <type>Lookup</type>
</CustomField>