force-app/main/default/objects/JBCXM__ReportSection__c/fields/JBCXM__Report__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Report__c</fullName>
    <description>This relation links ReportSection to Report</description>
    <label>Report</label>
    <referenceTo>JBCXM__Report__c</referenceTo>
    <relationshipLabel>Report</relationshipLabel>
    <relationshipName>Report</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>