force-app/main/default/objects/JBCXM__ReportSection__c/fields/JBCXM__Title__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Title__c</fullName>
    <label>Title</label>
    <length>250</length>
    <type>Text</type>
</CustomField>