force-app/main/default/objects/JBCXM__ReportSection__c/listViews/JBCXM__All.listView-meta.xml
<ListView>
    <fullName>JBCXM__All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>JBCXM__DisplayOrder__c</columns>
    <columns>JBCXM__ParentSection__c</columns>
    <columns>JBCXM__Report__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>